kubernetes/invoker/invoker-dcf.yml
# Licensed to the Apache Software Foundation (ASF) under one or more contributor
# license agreements; and to You under the Apache License, Version 2.0.

---
apiVersion: extensions/v1beta1
kind: DaemonSet
metadata:
  name: invoker
  namespace: openwhisk
  labels:
    name: invoker
spec:
  template:
    metadata:
      labels:
        name: invoker
    spec:
      restartPolicy: Always

      # run only on nodes labeled with openwhisk-role=invoker
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: openwhisk-role
                operator: In
                values:
                - invoker

      volumes:
      - name: cgroup
        hostPath:
          path: "/sys/fs/cgroup"
      - name: runc
        hostPath:
          path: "/run/runc"
      - name: dockerrootdir
        hostPath:
          path: "/var/lib/docker/containers"
      - name: dockersock
        hostPath:
          path: "/var/run/docker.sock"

      containers:
      - name: invoker
        imagePullPolicy: Always
        image: openwhisk/invoker
        command: [ "/bin/bash", "-c", "COMPONENT_NAME=$(hostname | cut -d'-' -f2) /init.sh" ]
        ports:
        - name: invoker
          containerPort: 8080
        volumeMounts:
        - name: cgroup
          mountPath: "/sys/fs/cgroup"
        - name: runc
          mountPath: "/run/runc"
        - name: dockersock
          mountPath: "/var/run/docker.sock"
        - name: dockerrootdir
          mountPath: "/containers"
