kubernetes/invoker/invoker-k8scf.yml
apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  name: invoker
  namespace: openwhisk
  labels:
    name: invoker
spec:
  replicas: 1
  serviceName: invoker
  template:
    metadata:
      labels:
        name: invoker
    spec:
      serviceAccountName: invoker
      restartPolicy: Always

      affinity:
        # prefer to run on an invoker node (only prefer because of single node clusters)
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            preference:
              matchExpressions:
              - key: openwhisk-role
                operator: In
                values:
                - invoker
        # do not allow more than 1 invoker instance to run on a node
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
                - key: name
                  operator: In
                  values:
                  - invoker
            topologyKey: "kubernetes.io/hostname"

      containers:
      - name: invoker
        imagePullPolicy: Always
        image: openwhisk/invoker
        command: [ "/bin/bash", "-c", "COMPONENT_NAME=$(hostname | cut -d'-' -f2) /init.sh" ]
        ports:
        - name: invoker
          containerPort: 8080
